--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Erica Delagnier"
 description: "Mon blog spécial Budget, mes réflexions sur l'argent et son rôle dans ma vie"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /blog_perso
+baseurl: http://erica-delagnier.fr/
 google_analytics: 'UA-46278016-1'
 disqus: 'delagnier'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
