--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Mon blog spécial Budget, mes réflexions sur l'argent et son rôl
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: 
-google_analytics: 'UA-46278016-1'
+google_analytics: 'G-SGBPLBRBX8'
 disqus: 'delagnier'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
